Fixed header position on Iphone 5

--- a/App/main/templates/Pages/promo/_styles/layout.sass
+++ b/App/main/templates/Pages/promo/_styles/layout.sass
@@ -54,6 +54,8 @@ div.header
   .feature
     width: $col-width
     margin-right: $gap-width
+    @media all and (max-width: 1023px)
+      margin-right: 0
 
 .contacts
   flex-direction: column
